--- a/15-Wireless/nRF_Control_Servo/platformio.ini
+++ b/15-Wireless/nRF_Control_Servo/platformio.ini
@@ -8,8 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcuv2]
-platform = espressif8266
-board = nodemcuv2
+[env:uno]
+platform = atmelavr
+board = uno
 framework = arduino
 lib_extra_dirs = lib/
+upload_port = COM4
